--- a/src/GUI/DangNhap.form
+++ b/src/GUI/DangNhap.form
@@ -110,6 +110,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtTenTK">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="admin"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTenTKActionPerformed"/>
           </Events>
@@ -140,6 +143,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="txtMatKhau">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="123"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtMatKhauActionPerformed"/>
           </Events>
