thêm, xóa, sửa, tìm kiếm, load danh sách khách hàng

--- a/src/GUI/DangNhap.form
+++ b/src/GUI/DangNhap.form
@@ -111,7 +111,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtTenTK">
           <Properties>
-            <Property name="text" type="java.lang.String" value="admin"/>
+            <Property name="text" type="java.lang.String" value="user1"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTenTKActionPerformed"/>
